--- a/ADGP 125/ADGP 125.csproj
+++ b/ADGP 125/ADGP 125.csproj
@@ -60,9 +60,11 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="FSM.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LoadSave.cs" />
+    <Compile Include="Singleton.cs" />
     <Compile Include="UserInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
