--- a/ADGP 125/ADGP 125.csproj
+++ b/ADGP 125/ADGP 125.csproj
@@ -83,6 +83,7 @@
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="FSM.cs" />
+    <Compile Include="Interface.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LoadSave.cs" />
